Add delete host/image API and CLI
